Anderson references. Some clean-up

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -3113,6 +3113,61 @@
   urlg         = {http://books.google.com/books?vid=ISBN1603031707},
   }
 
+@article{hilbert1904r1,
+  author       = {David Hilbert},
+  title        = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen
+                  (Fundamentals of a general theory of the linear integral equations)},
+  shorttitle   = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen},
+  publisher    = {Nachrichten von der Gesellschaft der Wissenschaften zu G\"ottingen
+                 (Message of the Society of the Sciences to G\"ottingen)},
+  address      = {G\"ottingen},
+  journal      = {Mathematisch-Physikalische Klasse (Mathematical-Physical Class)},
+  year         = {1904},
+  month        = {March},
+  pages        = {49--91},
+  url          = {http://dz-srv1.sub.uni-goettingen.de/sub/digbib/loader?did=D57552},
+  note         = {Report 1 of 6},
+  }
+
+@article{hilbert1906r4,
+  author       = {David Hilbert},
+  title        = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen
+                  (Fundamentals of a general theory of the linear integral equations)},
+  shorttitle   = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen},
+  publisher    = {Nachrichten von der Gesellschaft der Wissenschaften zu G\"ottingen
+                 (Message of the Society of the Sciences to G\"ottingen)},
+  address      = {G\"ottingen},
+  journal      = {Mathematisch-Physikalische Klasse (Mathematical-Physical Class)},
+  year         = {1906},
+  month        = {March},
+  pages        = {157--228},
+  urlx         = {http://www-gdz.sub.uni-goettingen.de/cgi-bin/digbib.cgi?PPN252457811_1906},
+  url          = {http://dz-srv1.sub.uni-goettingen.de/sub/digbib/loader?did=D58133},
+  note         = {Report 4 of 6},
+  }
+
+@book{hilbert1912,
+  author       = {David Hilbert},
+  title        = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen
+                  (Fundamentals of a general theory of the linear integral equations)},
+  shorttitle   = {Grundz\"uge einer allgemeinen Theorie der linearen Integralgleichungen},
+  publisher    = {\href{http://www.teubner.de/}{B.G. Teubner}},
+  series       = {Fortschritte der mathematischen Wissenschaften in Monographien
+                  (Progress of the mathematical sciences in Monographs)},
+  editor       = {von O. Blumenthal},
+  address      = {Leipzig und Berlin},
+  volume       = {26},
+  number       = {3},
+  year         = {1912},
+  pages        = {282},
+  lccn         = {34035035},
+  oclc         = {13468199},
+  urlg         = {http://books.google.com/books?vid=0aICkXdWhYEd69yOdbP2Sf8&id=8hcPAAAAIAAJ&q=%22Grundz%C3%BCge+einer+allgemeinen+Theorie+der+linearen+Integralgleichungen%22&dq=%22Grundz%C3%BCge+einer+allgemeinen+Theorie+der+linearen+Integralgleichungen%22&pgis=1},
+  url          = {http://www.worldcat.org/oclc/13468199},
+  urlw1953     = {http://www.worldcat.org/oclc/70378314},
+  urlw1953b    = {http://www.worldcat.org/oclc/674964},
+  }
+
 @book{hobson1921,
   title        = {The Theory of Functions of a Real Variable and the Theory of Fourier's Series, Volume 1},
   shorttitle   = {The Theory of Functions of a Real Variable\ldots, Volume 1},
