--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -66,6 +66,46 @@
   urla         = {http://www.amazon.com/dp/1461250560},
   }
 
+@book{anderson1958,
+  title        = {An introduction to multivariate statistical analysis},
+  series       = {Wiley series in probability and mathematical statistics},
+  author       = {Theodore Wilbur Anderson},
+  publisher    = {Wiley},
+  year         = {1958},
+  pages        = {374},
+  edition      = {1},
+  url          = {https://books.google.com/books?id=7YpqAAAAMAAJ},
+  }
+
+@book{anderson1984,
+  isbn         = {9780471889878},
+  isbn10       = {0471889873},
+  title        = {An Introduction to Multivariate Statistical Analysis},
+  volume       = {114},
+  series       = {Wiley Series in Probability and Statistics---Applied Probability and Statistics Section Series},
+  publisher    = {Wiley},
+  year         = {1984},
+  author       = {Theodore Wilbur Anderson},
+  edition      = {2},
+  pages        = {675},
+  url          = {http://books.google.com/books?vid=ISBN9780471889878},
+  urla         = {http://www.amazon.com/dp/9780471889878},
+  }
+
+@book{anderson2003,
+  isbn         = {9780471360919},
+  isbn10       = {0471360910},
+  title        = {An Introduction to Multivariate Statistical Analysis},
+  volume       = {355},
+  series       = {Wiley Series in Probability and Statistics},
+  author       = {Theodore Wilbur Anderson},
+  edition      = {3},
+  year         = {2003},
+  pages        = {752},
+  url          = {http://books.google.com/books?vid=ISBN9780471360919},
+  urla         = {http://www.amazon.com/dp/9780471360919},
+  }
+
 @book{bajpai1967,
   title        = {Foundations of statistics},
   author       = {Om Prakash Bajpai},
