--- a/common/correlation_estimation.tex
+++ b/common/correlation_estimation.tex
@@ -26,8 +26,8 @@
   }
 %---------------------------------------
 \thmbox{\begin{array}{rc>{\ds}lD}
-  \pE\brs{\estRxx(m)} &=& \brp{1-\frac{\abs{m}}{\xN}}\Rxx(m) & (\prope{asymptotically unbiased})\\
-  \var\brs{estRxx(m)} &=& \frac{1}{\xN} \sum_{n\in\Z} \brs{\Rxx^2(n) + \Rxx(n-m)\Rxx(n+m)} & (\prope{consistent})
+  \pE \brs{\estRxx(m)} &=& \brp{1-\frac{\abs{m}}{\xN}}\Rxx(m) & (\prope{asymptotically unbiased})\\
+  \var\brs{\estRxx(m)} &=& \frac{1}{\xN} \sum_{n\in\Z} \brs{\Rxx^2(n) + \Rxx(n-m)\Rxx(n+m)} & (\prope{consistent})
 \end{array}}
 \end{theorem}
 
