--- a/common/mat_calc.tex
+++ b/common/mat_calc.tex
@@ -85,12 +85,14 @@ Other references are also available.%
 \end{definition}
 
 %--------------------------------------
-\begin{definition}[Jacobian matrix]
+\begin{definition}[\opd{Jacobian matrix}]
 \footnote{
   \citerp{graham}{52},
   \citerp{graham2018}{52}{9780486824178}{\textsection ``4.2 The Derivatives of Vectors"},
   \citerp{scharf}{274},
-  \citerp{vantrees4}{1398}
+  \citerp{vantrees4}{1398},
+  \citerpgc{anderson1984}{13}{9780471889878}{\textsection ``2.2.5 Transformation of Variables"},
+  \citerpc{anderson1958}{11}{\textsection ``2.2.5 Transformation of Variables"}
   }
 \label{def:grad}
 \index{Jacobian matrix}
@@ -103,12 +105,12 @@ is defined as
   \pderiv{\vy^T}{\vx} \eqd
   \mcom{
   \renewcommand{\arraystretch}{2}
-  \left[\begin{array}{*{4}{>{\ds}c}}
+  \brs{\begin{array}{*{4}{>{\ds}c}}
     \pderiv{y_1}{x_1} & \pderiv{y_2}{x_1} & \cdots & \pderiv{y_m}{x_1} \\
     \pderiv{y_1}{x_2} & \pderiv{y_2}{x_2} & \cdots & \pderiv{y_m}{x_2} \\
     \vdots            & \vdots            & \ddots & \vdots            \\
     \pderiv{y_1}{x_n} & \pderiv{y_2}{x_n} & \cdots & \pderiv{y_m}{x_n}
-  \end{array}\right]
+  \end{array}}
   }{$n\times m$ matrix}
   \qquad\qquad
   \forall \vy\in\vCm
@@ -276,12 +278,15 @@ Let $\vx\in\vRn$ be a vector. Then
          \vdots                                   \\
          \pderiv{}{x_n}\brs{\fa(\vx)\,\fb(\vx)}  
        \end{array}\right]
+    && \text{by definition of $\pderiv{}{\vx}$}
+    && \text{\xref{def:grad}}
   \\&= \left[\begin{array}{l}
          \fa(\vx)\,\pderiv{\fb(\vx)}{x_1} + \fb(\vx)\,\pderiv{\fa(\vx)}{x_1}     \\
          \fa(\vx)\,\pderiv{\fb(\vx)}{x_2} + \fb(\vx)\,\pderiv{\fa(\vx)}{x_2}     \\
          \\ \vdots                                \\                              
          \fa(\vx)\,\pderiv{\fb(\vx)}{x_n} + \fb(\vx)\,\pderiv{\fa(\vx)}{x_n}     
        \end{array}\right]
+    && \text{by \prope{linearity} of $\pderiv{}{\vx}$}
   \\&= \left[\begin{array}{l}
          \fa(\vx)\,\pderiv{\fb(\vx)}{x_1}  \\
          \fa(\vx)\,\pderiv{\fb(\vx)}{x_2}  \\
@@ -294,6 +299,7 @@ Let $\vx\in\vRn$ be a vector. Then
          \vdots                          \\
          \pderiv{\fa(\vx)}{x_n} \fb(\vx)
        \end{array}\right]
+    && \text{by \prope{linearity} of \ope{vector addition}}
   \\&= \fa(\vx)\brs{\pderiv{\fb(\vx)}{\vx}} + \brs{\pderiv{\fa(\vx)}{\vx}}\fb(\vx)
 \end{align*}
 \end{proof}
