--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -280,13 +280,13 @@ it \prope{unbiased}.
 Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\rvx_n}$.
 Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} of $\rvx_n$.
 \thmbox{
-  \brb{\begin{array}{FMD}
+  \brbr{\begin{array}{FMD}
       (A).& $\seqn{\rvx_n}$ is \prope{WSS}          & and
     \\(B).& $\mean\eqd\pE\rvx_n$                    & and
     \\(C).& \mc{2}{M}{$\seqn{\rvx_n}$ is \prope{uncorrelated}}
   \end{array}}
   \implies
-  \brb{\begin{array}{FrclDD}
+  \brbl{\begin{array}{FrclDD}
       (1).& \pE\varest_B\seqn{\rvx_n}  &=& \ds\frac{\xN-1}{\xN}\pvar            & (\prope{biased})   & and
     \\(2).& \pE\varest  \seqn{\rvx_n}  &=& \ds                 \pvar            & (\prope{unbiased}) & and
     \\(3).& \var\brs{\varest\seqn{\rvx_n}} &=& \mc{2}{l}{\ds\frac{1}{\xN}\brs{\mu^4 - \brp{\frac{\xN-3}{\xN-1}}\sigma^4}} & (\prope{consistent})
@@ -318,8 +318,8 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
         \begin{align*}
           \pE\varest_B\brp{\seqn{\rvx_n}}
             &\eqd \pE\brs{\frac{1}{\xN}  \sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2}
-            && \text{by definition of $\varest_B$}
-            && \text{\xref{def:varest}}
+            && \text{by definition of $\varest_B$ 
+                     \xref{def:varest}}
           \\&= \frac{1}{\xN} \pE\brs{ \sum_{n=1}^{\xN} \brp{\rvx_n \mcom{-\mean + \mean}{$0$} - \meanest}^2}
           \\&= \mathrlap{
                \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \mcom{\pE\brp{\rvx_n -\mean}^2}{$\pvar$} + 2\pE\brs{(\rvx_n -\mean)(\mean - \meanest)} + \pE\brp{\mean - \mcom{\meanest}{$\pE\mean$}}^2 }
@@ -376,7 +376,7 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
            }
       \\&= \brp{\frac{1}{\xN-1}}^2\pE\brs{
            \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
-           \brs{\begin{array}{cl}
+           \brs{\begin{array}{c@{\hspace{2pt}}l}
                & \brp{\rvx_n^2\rvx_m^2 -2\meanest\rvx_n^2\rvx_m + \meanest^2\rvx_n^2}
               +  \brp{-2\meanest\rvx_n\rvx_m^2 +4\meanest^2\rvx_n\rvx_m -2\rvx_n\meanest^3}
             \\+&\brp{\meanest^2\rvx_m^2 -2\meanest^3\rvx_m + \meanest^4}
@@ -384,7 +384,7 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
            }
       \\&= \brp{\frac{1}{\xN-1}}^2
            \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
-           \brs{\begin{array}{cl}
+           \brs{\begin{array}{c@{\hspace{2pt}}l}
                    &\pE\brs{          \rvx_n^2\rvx_m^2 }
                  -2 \pE\brs{\meanest  \rvx_n^2\rvx_m   }
                  -2 \pE\brs{\meanest  \rvx_n  \rvx_m^2 }
@@ -397,7 +397,7 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
            \end{array}}
       \\&= \brp{\frac{1}{\xN-1}}^2
            \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
-           \brs{\begin{array}{cl}
+           \brs{\begin{array}{c@{\hspace{2pt}}l}
                    &\pE\brs{          \rvx_n^2\rvx_m^2 }
                  -4 \pE\brs{\meanest  \rvx_n^2\rvx_m   }
                  +2 \pE\brs{\meanest^2\rvx_n^2         }
