--- a/common/somepdfs.tex
+++ b/common/somepdfs.tex
@@ -104,8 +104,6 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
     image:       &
     }
 
-
-
 \begin{figure}[ht]
    \begin{center}
    \includegraphics[height=8cm, width=12cm, clip=]{../common/pdf_norm.eps}
@@ -119,16 +117,17 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
 %---------------------------------------
 \begin{definition}
 %---------------------------------------
-The \hid{Gaussian distribution} (or \hid{normal distribution} has pdf
-\defbox{
-  \ppx(x) \eqd \frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-(x-\mu)^2}{2\sigma^2}}
-  }
-A random variable $\rvX$ with this distribution is denoted
-\defbox{ X \sim \pN{\mu}{\sigma^2} }
-The function $Q(x)$ is defined as the area under a
-Gaussian PDF with zero mean and variance equal to one
-from $x$ to infinity such that
-\defbox{Q(x) \eqd \frac{1}{\sqrt{2\pi}} \int_x^\infty e^{\frac{-u^2}{2}} \du }
+\defbox{\begin{array}{c>{\ds}rc>{\ds}l}
+  \mc{4}{M}{The \fnctd{Gaussian distribution} (or \fnctd{normal distribution}) has pdf}
+    \\& \ppx(x) &\eqd& \frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-(x-\mu)^2}{2\sigma^2}}
+    \\
+  \mc{4}{M}{A random variable $\rvX$ with this distribution is denoted}
+    \\& \rvX &\sim& \pN{\mu}{\sigma^2}
+    \\
+  \mc{4}{M}{The function $\fQ(x)$ is defined as the area under a Gaussian PDF}\\
+  \mc{4}{M}{with zero mean and variance equal to one from $x$ to infinity such that}
+    \\& \fQ(x) &\eqd& \frac{1}{\sqrt{2\pi}} \int_x^\infty e^{\frac{-u^2}{2}} \du
+\end{array}}
 \end{definition}
 
 %=======================================
@@ -559,8 +558,10 @@ The \fnctd{Rice distribution} is the pdf
 \end{figure}
 
 %---------------------------------------
-\begin{definition}[Joint Gaussian pdf]
+\begin{definition}[\fnctd{Joint Gaussian pdf}]
 \footnote{
+  \citerpgc{anderson1984}{21}{9780471889878}{\scshape Theorem 2.3.1},
+  \citerpc{anderson1958}{14}{\textsection ``\scshape2.3 The Multivariate Normal Distribution"},
   \citerp{proakis}{49},
   \citerp{moon2000}{34}
   }
@@ -608,7 +609,7 @@ The \fnctd{Rice distribution} is the pdf
 %---------------------------------------
 \begin{example}[1 variable joint Gaussian pdf]
 %---------------------------------------
-The \hid{Gaussian distribution} (or \hid{normal distribution} has pdf
+The \fnctd{Gaussian distribution} (or \fnctd{normal distribution} has pdf
 \exbox{
   \ppx(x) \eqd \frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-(x-\mu)^2}{2\sigma^2}}
   }
@@ -659,6 +660,4 @@ The \hid{Gaussian distribution} (or \hid{normal distribution} has pdf
         \right)
 \end{array}}
 \end{example}
-
-
 
