--- a/common/spectral.tex
+++ b/common/spectral.tex
@@ -27,11 +27,11 @@
 %---------------------------------------
 Let $\opA\in\clB{\spX}{\spY}$ be an operator over the linear spaces
 $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
-Let $\oppN(\opA)$ be the \hie{null space} of $\opA$.
+Let $\oppN(\opA)$ be the \structe{null space} of $\opA$.
 \defbox{\begin{array}{l}
-  \text{An \hid{eigenvalue} of $\opA$ is any value $\lambda$ such that there exists $\vx$ such that $\opA\vx=\lambda\vx$.} \\
-  \text{The \hid{eigenspace} $\spH_\lambda$ of $\opA$ at eigenvalue $\lambda$ is $\oppN(\opA-\lambda\opI)$.} \\
-  \text{An \hid{eigenvector} of $\opA$ associated with eigenvalue $\lambda$ is any element of $\oppN(\opA-\lambda\opI)$.}
+  \text{An \vald{eigenvalue} of $\opA$ is any value $\lambda$ such that there exists $\vx$ such that $\opA\vx=\lambda\vx$.} \\
+  \text{The \structd{eigenspace} $\spH_\lambda$ of $\opA$ at eigenvalue $\lambda$ is $\oppN(\opA-\lambda\opI)$.} \\
+  \text{An \vald{eigenvector} of $\opA$ associated with eigenvalue $\lambda$ is any element of $\oppN(\opA-\lambda\opI)$.}
 \end{array}}
 \end{definition}
 
@@ -101,7 +101,7 @@ to prove/disprove its claims.\problem
 Let $\opA\in\clB{\spX}{\spY}$ be an operator over the linear spaces
 $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
 \defboxp{\indxs{\oppRes}\indxs{\oppSpec}
-  The \hid{resolvent set} $\oppRes(\opA)$ of operator $\opA$ is defined as
+  The \structd{resolvent set} $\oppRes(\opA)$ of operator $\opA$ is defined as
   \[
     \oppRes(\opA) \eqd 
     \set{\lambda\in F}
@@ -111,7 +111,7 @@ $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
           3. & (\opA -\lambda\opI)^{-1} \in \clB{\spX}{\spY}  & (inverse is continuous/bounded).   & 
          \end{array}}
   \]
-  The \hid{spectrum} $\oppSpec(\opA)$ of operator $\opA$ is defined as
+  The \structd{spectrum} $\oppSpec(\opA)$ of operator $\opA$ is defined as
   \[ \oppSpec(\opA) \eqd F \setd \oppRes(\opA). \]
 %  \set{\lambda\in F}{\lambda\notin \oppRes(\opA)}
   }
@@ -123,14 +123,14 @@ $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
 \footnote{
   \citerp{bollobas1999}{168},
   %\citerp{michel1993}{440},
-  \citorpp{hilbert1906r4}{169}{172}
+  \citePpp{hilbert1906r4}{169}{172}
   }
 %---------------------------------------
 Let $\opA\in\clB{\spX}{\spY}$ be an operator over the linear spaces
 $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
 \defbox{\indxs{\oppSpecp}\indxs{\oppSpecr}\indxs{\oppSpecc}
   \begin{array}{rcl}
-  \mc{3}{l}{\text{The \hid{point spectrum} $\oppSpecp(\opA)$ of operator $\opA$ is defined as }} \\
+  \mc{3}{l}{\text{The \structd{point spectrum} $\oppSpecp(\opA)$ of operator $\opA$ is defined as }} \\
   \qquad\oppSpecp(\opA) 
   &\eqd& 
   \set{\lambda\in F}
@@ -138,7 +138,7 @@ $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
         1. & \oppN(\opA -\lambda\opI)\supseteq\setn{\vzero}   & (has non-zero eigenvector) &  \\
       \end{array}}
   \\
-  \mc{3}{l}{\text{The \hid{residual spectrum} $\oppSpecr(\opA)$ of operator $\opA$ is defined as }} \\
+  \mc{3}{l}{\text{The \structd{residual spectrum} $\oppSpecr(\opA)$ of operator $\opA$ is defined as }} \\
   \qquad\oppSpecr(\opA) 
   &\eqd& 
   \set{\lambda\in F}
@@ -147,7 +147,7 @@ $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
         2. & \overline{\oppR(\opA -\lambda\opI)}\ne \spX  & (not dense in $\spX$---has gaps).      &     
       \end{array}}
   \\
-  \mc{3}{l}{\text{The \hid{continuous spectrum} $\oppSpecc(\opA)$ of operator $\opA$ is defined as }} \\
+  \mc{3}{l}{\text{The \structd{continuous spectrum} $\oppSpecc(\opA)$ of operator $\opA$ is defined as }} \\
   \qquad\oppSpecc(\opA) 
   &\eqd& 
   \set{\lambda\in F}
@@ -256,10 +256,10 @@ and its inverse $\lambda^{-1}x$ is continuous.
 
 If for some $\lambda$ the operator $\opB(\lambda)$ 
 does have all these ``regular" properties, 
-then that $\lambda$ part of the \hie{resolvent set} of $\opA$ and $\lambda$ is called
-\hie{regular}.
+then that $\lambda$ part of the \structe{resolvent set} of $\opA$ and $\lambda$ is called
+\prope{regular}.
 However if for some $\lambda$ the operator $\opB(\lambda)$ 
-fails any of these conditions, then that $\lambda$ part of the \hie{spectrum} of $\opA$.
+fails any of these conditions, then that $\lambda$ part of the \structe{spectrum} of $\opA$.
 And which conditions it fails determines which component of the spectrum it is in.
 
 %---------------------------------------
@@ -279,7 +279,7 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
 \footnote{
   \citerp{michel1993}{457},
   \citerp{bollobas1999}{200},
-  \citer{hilbert1906r4},
+  \citeP{hilbert1906r4},
   \citer{hilbert1912},
   \citer{vonNeumann1929},
   \citer{deWitt}
@@ -288,8 +288,8 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
 Let $\opN\in\clFxy$ be an operator.
 \thmbox{\begin{array}{l}
   \left.\begin{array}{Fl}
-    (A). & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \hie{normal}}\\
-    (B). & \text{$\opN$ is \hie{compact}}
+    (A). & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \prope{normal}}\\
+    (B). & \text{$\opN$ is \prope{compact}}
   \end{array}\right\}
   \qquad\implies\qquad
   \left\{\begin{array}{F>{\ds}rc>{\ds}l}
@@ -322,18 +322,18 @@ Let $\opN\in\clFxy$ be an operator.
 \index{Fredholm integral equation of the first kind|textbf}
 %---------------------------------------
 \defbox{\begin{array}{l@{\qquad}l}
-  \mc{2}{l}{\text{A \hid{Fredholm operator} $\opK$ is defined as}}
+  \mc{2}{l}{\text{A \opd{Fredholm operator} $\opK$ is defined as}}
   \\&
   \brs{\opK\ff}(t) 
   \eqd 
-  \mcom{\int_a^b \mcom{\kappa(t,s)}{kernel} \ff(s) \dd{s} }
+  \mcom{\int_a^b \mcom{\kernel(t,s)}{kernel} \ff(s) \dd{s} }
        {Fredholm integral equation of the first kind \footnotemark}
   \qquad \forall \ff\in \spL_2([a,b])
   \end{array}}
 \footnotetext{
-   The equation $\int_u \kappa(t,s) \ff(s) \dd{s}$ is a 
+   The equation $\int_u \kernel(t,s) \ff(s) \dd{s}$ is a 
    \fnctd{Fredholm integral equation of the first kind} and
-   $\kappa(t,u)$ is the {\bf kernel} of the equation.
+   $\kernel(t,u)$ is the {\bf kernel} of the equation.
    References: 
      \citer{fredholm1900},
      \citerp{fredholm1903}{365},
@@ -350,62 +350,61 @@ Examples of \prop{Fredholm operators} include
 \begin{array}{llrclrcl}
   1. & \text{Fourier Transform}
      & [\opFT \fx](f) &=& \int_t \fx(t) e^{-i2\pi ft}\dt 
-     & \kappa(t,f)    &=& e^{-i2\pi ft}
+     & \kernel(t,f)    &=& e^{-i2\pi ft}
 \\
   2. & \text{Inverse Fourier Transform}
      & [\opFTi \Fx](t) &=& \int_f \Fx(f) e^{i2\pi ft}\df 
-     & \kappa(f,t)    &=& e^{i2\pi ft}
+     & \kernel(f,t)    &=& e^{i2\pi ft}
 \\
   3. & \text{Laplace operator}
      & [\opL \fx](s) &=& \int_t \fx(t) e^{-st}\dt 
-     & \kappa(t,s)   &=& e^{-st}
+     & \kernel(t,s)   &=& e^{-st}
 \\
   4. & \text{autocorrelation operator}
      & [\opR \fx](t) &=& \int_s R(t,s) \fx(s) \dds 
-     & \kappa(t,s)   &=& R(t,s) %\text{ (autocorrelation function)}
+     & \kernel(t,s)   &=& R(t,s) %\text{ (autocorrelation function)}
 \end{array}
 \]
 \end{example}
-
 
 %---------------------------------------
 \begin{theorem}
 \label{thm:intop_KkKk}
 %---------------------------------------
-Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $\opKa$.
+Let $\opK$ be a \prop{Fredholm operator} with kernel $\kernel(t,s)$ and adjoint $\opKa$.
 \thmbox{
-  \brs{\opK\ff}(t) = \int_\setA \kappa(t,s) \ff(s) \dds
+  \brs{\opK\ff}(t) = \int_\setA \kernel(t,s) \ff(s) \dds
   \qquad\iff\qquad
-  \brs{\opKa\ff}(t) = \int_\setA \kappa^\ast(s,t) \ff(s) \dds
+  \brs{\opKa\ff}(t) = \int_\setA \kernel^\ast(s,t) \ff(s) \dds
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
    \brs{\opK\ff}(t) 
-     &= \int_\setA \kappa(t,s) \ff(s) \dds
+     &= \int_\setA \kernel(t,s) \ff(s) \dds
    \\\iff
    \inprod{\brs{\opK \ff}(t)}{\fg(t)}
-     &= \inprod{\int_s \kappa(t,s) \ff(s) \dds}{\fg(t)}
+     &= \inprod{\int_s \kernel(t,s) \ff(s) \dds}{\fg(t)}
      && \text{by left hypothesis}
-   \\&= \int_s \ff(s) \inprod{\kappa(t,s)  }{\fg(t)} \dds
+   \\&= \int_s \ff(s) \inprod{\kernel(t,s)  }{\fg(t)} \dds
      && \text{by additivity property of $\inprodn$\ifsxref{vsinprod}{def:inprod}}
-   \\&= \int_s \ff(s) \inprod{\fg(t)}{\kappa(t,s)}^\ast \dds
+   \\&= \int_s \ff(s) \inprod{\fg(t)}{\kernel(t,s)}^\ast \dds
      && \text{by conjugate symmetry property of $\inprodn$\ifsxref{vsinprod}{def:inprod}}
-   \\&= \inprod{ \ff(s) }{\inprod{\fg(t)}{\kappa(t,s)} }
+   \\&= \inprod{ \ff(s) }{\inprod{\fg(t)}{\kernel(t,s)} }
      && \text{by local definition of $\inprodn$}
-   \\&= \inprod{ \ff(s) }{\mcom{\int_t \kappa^\ast(t,s) \fg(t) \dt}{$\brs{\opKa\fg}(s)$} }
+   \\&= \inprod{ \ff(s) }{\mcom{\int_t \kernel^\ast(t,s) \fg(t) \dt}{$\brs{\opKa\fg}(s)$} }
      && \text{by local definition of $\inprodn$}
    \\\iff
    \brs{\opKa\fg}(s) 
-     &= \int_\setA \kappa^\ast(t,s) \fg(t) \dt
+     &= \int_\setA \kernel^\ast(t,s) \fg(t) \dt
      && \text{by right hypothesis}
    \\\iff
    \brs{\opKa\fg}(\sigma) 
-     &= \int_\setA \kappa^\ast(\tau,\sigma) \fg(\tau) \dtau
+     &= \int_\setA \kernel^\ast(\tau,\sigma) \fg(\tau) \dtau
      && \text{by change of variable: $\tau=t,\, \sigma=s$}
    \\\iff
    \brs{\opKa\ff}(t) 
-     &= \int_\setA \kappa^\ast(s,t) \ff(s) \dds
+     &= \int_\setA \kernel^\ast(s,t) \ff(s) \dds
      && \text{by change of variable: $t=\sigma,\, s=\tau,\, \ff=\fg$}
 \end{align*}
 \end{proof}
@@ -416,24 +415,24 @@ Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $
   \citerp{michel1993}{430}
   }
 %---------------------------------------
-Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $\opKa$.
+Let $\opK$ be an \prop{Fredholm operator} with kernel $\kernel(t,s)$ and adjoint $\opKa$.
 \corbox{
   \mcom{\opK=\opKa}{$\opK$ is self-adjoint}
   \qquad\iff\qquad
-  \mcom{\kappa(t,s) = \kappa^\ast(s,t)}{kernel is \prop{conjugate symmetric}}
+  \mcom{\kernel(t,s) = \kernel^\ast(s,t)}{kernel is \prop{conjugate symmetric}}
   }
 \end{corollary}
 \begin{proof}
 \begin{align*}
   \opK = \opKa
-    &\iff \int_\setA \kappa(t,s) \ff(s) \dds = \int_\setA \kappa^\ast(s,t) \ff(s) \dds
+    &\iff \int_\setA \kernel(t,s) \ff(s) \dds = \int_\setA \kernel^\ast(s,t) \ff(s) \dds
     &&    \text{by \prefp{thm:intop_KkKk}}
-  \\&\iff \kappa(t,s) =  \kappa^\ast(s,t) 
+  \\&\iff \kernel(t,s) =  \kernel^\ast(s,t) 
 \end{align*}
 \end{proof}
 
 %---------------------------------------
-\begin{theorem}[Mercer's Theorem]
+\begin{theorem}[\thmd{Mercer's Theorem}]
 \label{thm:mercer}
 \footnote{
   \citerp{gohberg}{198},
@@ -443,18 +442,20 @@ Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint 
 \index{Mercer's Theorem}
 \index{theorems!Mercer's Theorem}
 %---------------------------------------
-Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and
+Let $\opK$ be an \prop{Fredholm operator} with kernel $\kernel(t,s)$ and
 eigensystem $\seq{(\lambda_n,\phi_n(t))}{n\in\Z}$.
 \thmbox{
-  \brb{\begin{array}{F>{\ds}lD}
-    (A). & \mcom{\int_a^b \int_a^b \kappa(t,s) \ff(t) \ff^\ast(s) \ds\dt \ge 0}{positive} & and\\
-    (B). & \kappa(t,s) \text{ is continuous on } [a,b]\times[a,b]
+  \brb{\begin{array}{FMD}
+    (A). & $\ds\mcom{\int_a^b \int_a^b \kernel(t,s) \ff(t) \ff^\ast(s) \ds\dt \ge 0}{positive}$ & and\\
+    (B). & $\kernel(t,s)$ is \prope{continuous} on
+       \\& $\intcc{a}{b}\times\intcc{a}{b}$
   \end{array}}
   \implies
   \brb{\begin{array}{F>{\ds}lD}
-    (1). & \kappa(t,s) = \sum_n \lambda_n \fphi_n(t) \fphi_n^\ast(s) & and\\
-    (2). & \kappa(t,s) \text{ converges absolutely and} \\
-      & \text{uniformly on $\intcc{a}{b}\times\intcc{a}{b}$}
+    (1). & \kernel(t,s) = \sum_n \lambda_n \fphi_n(t) \fphi_n^\ast(s) & and\\
+    (2). & \mc{2}{M}{$\kernel(t,s)$ \prope{converges absolutely}}
+       \\& \mc{2}{M}{and \prope{uniformly} on}
+       \\& \mc{2}{M}{$\intcc{a}{b}\times\intcc{a}{b}$}
   \end{array}}
   }
 \end{theorem}
