KL-basis clean-up

--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -685,7 +685,7 @@ Then
        +  \pderiv{}{a}\ln
           \exp{\frac{1}{-2\sigma^2} \sum_{n=1}^\xN (\fdoty_n- a\fdotlam_n)^2}
    \\&=  \pderiv{}{a}
-          \frac{1}{-2\sigma^2} \sum_{n=1}^\xN (\fdoty_n- a\fdotlam_n)^2
+          \brs{\frac{1}{-2\sigma^2} \sum_{n=1}^\xN (\fdoty_n- a\fdotlam_n)^2}
    \\&=  \frac{1}{-2\sigma^2} \sum_{n=1}^\xN 2(\fdoty_n- a\fdotlam_n)(- \fdotlam_n)
    \\&=  \frac{1}{\sigma^2} \sum_{n=1}^\xN \fdotlam_n(\fdoty_n- a\fdotlam_n)
 \\
@@ -708,9 +708,9 @@ Then
      \qquad\text{(Cram\'er-Rao lower bound of the variance)}
 \end{align*}
 
-\item Prove that $\estML[a]$ is an {\bf \prope{efficient} estimate}:
+\item Proof that $\estML[a]$ is an \prope{efficient} estimate:
 
-A estimate is \prope{efficient} if
+An estimate is \prope{efficient} if
 $\var\estML[a]=\mbox{CR lower bound}$.
 We have already proven this, so $\estML[a]$ is an \prope{efficient} estimate.
 
@@ -737,7 +737,6 @@ if and only if
 \end{align*}
 \end{enumerate}
 \end{proof}
-
 
 %---------------------------------------
 \begin{theorem}[\thmd{ML phase estimation}]
